--- a/pages/project.html
+++ b/pages/project.html
@@ -21,7 +21,7 @@
             <div class="edit-img"><img src="../assets/images/edit image 5.jpg" alt="Edit Image 5"></div>
             <div class="edit-img"><img src="../assets/images/edit image 6.jpg" alt="Edit Image 6"></div>
             <div class="button">
-                <a href="http://127.0.0.1:3000/index.html#skills" class="btn">Back</a>
+                <a href="../index.html" class="btn">Back</a>
             </div>
         </div>
 
