--- a/index.html
+++ b/index.html
@@ -117,13 +117,15 @@
 
         <div class="contact-form">
 
-            <form action="https://formsubmit.co/harikrishnan888555@gmail.com" method="POST">
-                <input type="name" placeholder="your Name" required>
-                <input type="email" placeholder="Your Mail" required>
-                <input type="number" placeholder="Your Mobile Number" required>
-                <textarea name="" id="" cols="35" rows="10" placeholder="How Can I Help You" required></textarea>
+            <form  action="https://formspree.io/f/mldrypzz" method="POST">            
+                    <input type="hidden" name="_captcha" value="false">
+
+                <input type="name" name="name" placeholder="your Name" required>
+                <input type="email" name="email" placeholder="Your Mail" required>
+                <input type="number" name="mobile-number" placeholder="Your Mobile Number" required>
+                <textarea name=" Message" id="" cols="35" rows="10" placeholder="How Can I Help You" required></textarea>
                 <input type="submit" value="Send Message" class="submit" required>
-                <input type="hidden" name="_captcha" value="false">
+                
             </form>
 
         </div>
