--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="home-text">
             <div class="slide">
                 <span class="one">Hello</span>
-                <span class="two">I'am</span>
+                <span class="two">I am</span>
             </div>
             <h1 class="nam">Harikrishnan</h1>
             <h3>Website <span>Designer.</span></h3>
-            <p> I'am an aspiring web developer and<br> also intrested in designing technology. 
+            <p> I am an aspiring Web Developer and<br> also interested in Designing technology. 
             </p>
         </div>
         <div class="button">
@@ -55,7 +55,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Web Designer!</h4>
-            <p>Hello I'm Harikrishnan from Thiruvarur and I have completed my diplamo in Electrical and Electronics Engineering (EEE).
+            <p>Hello,I am Harikrishnan from Thiruvarur and I have completed my diploma in Electrical and Electronics Engineering (EEE). And
                 I also have 2+  years of experience in manufacturing industry. 
                </p>
                <h5 class="fssa">I am a FSSA STUDENT now.</h5>
