--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Web Designer!</h4>
-            <p>Hello,I am Harikrishnan from Thiruvarur and I have completed my diploma in Electrical and Electronics Engineering (EEE). And
+            <p>Hello, I am Harikrishnan from Thiruvarur and I have completed my diploma in Electrical and Electronics Engineering (EEE).
                 I also have 2+  years of experience in manufacturing industry. 
                </p>
                <h5 class="fssa">I am a FSSA STUDENT now.</h5>
@@ -94,7 +94,7 @@
             <h2 class="contact-me" id="contact-me">Contact <span>Me!</span></h2>
             <div id="hint">
                 <h4 >If you have any project in your mind. </h4>
-                <p class="cnt">I'm a web designer</p>
+                <p class="cnt">Remember me at:</p>
                 <div class="list">
                     <li><a href="#"><i class='bx bx-phone-call'></i> +91 8489110920</a></li>
                     <li><a href="#"><i class='bx bxl-gmail' ></i> mr.harikrishnan@gmail.com</a></li>
