--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Web Designer!</h4>
-            <p>Hello, I am Harikrishnan from Thiruvarur and I have completed my diploma in Electrical and Electronics Engineering (EEE).
-                I also have 2+  years of experience in manufacturing industry. 
+            <p>Hello, I am Harikrishnan from Thiruvarur and I have completed my Diploma in Electrical and Electronics Engineering (EEE).
+                I have 2+ years of experience in manufacturing industry. I hardly had any knlowedge in computers, but now in three months I have learnt about computers, html, CSS, JS, English and Life Skills.
                </p>
                <h5 class="fssa">I am a FSSA STUDENT now.</h5>
         </div>
