--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header section -->
 
     <header>
-        <a href="#" class="logo">devlo<span>pe</span>r..</a>
+        <a href="#" class="logo">develo<span>pe</span>r..</a>
         <nav>
         <ul class="navList">
             <li><a href="#home" class="active">Home</a></li>
