--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header section -->
 
     <header>
-        <a href="#" class="logo">develo<span>pe</span>r..</a>
+        <a href="#" class="logo">develo<span>pe</span>r..<span>.</span></a>
         <nav>
         <ul class="navList">
             <li><a href="#home" class="active">Home</a></li>
@@ -37,8 +37,7 @@
             </div>
             <h1 class="nam">Harikrishnan</h1>
             <h3>Website <span>Designer.</span></h3>
-            <p> I am an aspiring Web Developer and<br> also interested in Designing technology. 
-            </p>
+            <p> I am an aspiring Web Developer</p>
         </div>
         <div class="button">
             <a href="#about" class="btn">About Me</a>
@@ -56,9 +55,10 @@
             <h2>About <span>Me</span></h2>
             <h4>Web Designer!</h4>
             <p>Hello, I am Harikrishnan from Thiruvarur and I have completed my Diploma in Electrical and Electronics Engineering (EEE).
-                I have 2+ years of experience in manufacturing industry. I hardly had any knlowedge in computers, but now in three months I have learnt about computers, html, CSS, JS, English and Life Skills.
+                I have 2+ years of experience in manufacturing industry. 
+                I hardly had any knlowedge in computers, but now in three months I have learnt about computers, HTML, CSS, JS and improve my English and Life Skills.
                </p>
-               <h5 class="fssa">I am a FSSA STUDENT now.</h5>
+               <h5 class="fssa">I am currently FSSA STUDENT now.</h5>
         </div>
         <!-- <a href="#" class="btn">More About</a> -->
     </section>
@@ -94,7 +94,7 @@
             <h2 class="contact-me" id="contact-me">Contact <span>Me!</span></h2>
             <div id="hint">
                 <h4 >If you have any project in your mind. </h4>
-                <p class="cnt">Remember me at:</p>
+                <p class="cnt">Do get in touch</p>
                 <div class="list">
                     <li><a href="#"><i class='bx bx-phone-call'></i> +91 8489110920</a></li>
                     <li><a href="#"><i class='bx bxl-gmail' ></i> mr.harikrishnan@gmail.com</a></li>
@@ -120,10 +120,10 @@
             <form  action="https://formspree.io/f/mldrypzz" method="POST">            
                     <input type="hidden" name="_captcha" value="false">
 
-                <input type="name" name="name" placeholder="your Name" required>
-                <input type="email" name="email" placeholder="Your Mail" required>
+                <input type="name" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
                 <input type="number" name="mobile-number" placeholder="Your Mobile Number" required>
-                <textarea name=" Message" id="" cols="35" rows="10" placeholder="How Can I Help You" required></textarea>
+                <textarea name=" Message" id="" cols="35" rows="10" placeholder="How Can I Help You?" required></textarea>
                 <input type="submit" value="Send Message" class="submit" required>
                 
             </form>
