--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 I have 2+ years of experience in manufacturing industry. 
                 I hardly had any knlowedge in computers, but now in three months I have learnt about computers, HTML, CSS, JS and improve my English and Life Skills.
                </p>
-               <h5 class="fssa">I am currently FSSA STUDENT now.</h5>
+               <h5 class="fssa">I am currently a FSSA student.</h5>
         </div>
         <!-- <a href="#" class="btn">More About</a> -->
     </section>
