--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
     <section class="skills" id="skills">
         <h2>My <span>Skills</span></h2>
-        <h4 class="coding">Coding</h4>
-        <h4 class="editing">Photo Editing</h4>
+        <h4 class="coding">Professional Skills</h4>
+        <h4 class="editing">Personal Skills</h4>
 
         <ul class="coding-content">
             
